[gd_scene load_steps=22 format=3 uid="uid://ddr7x4g7y2pmn"]

[ext_resource type="Script" path="res://scripts/screen_title.gd" id="1_gkkox"]
[ext_resource type="FontFile" uid="uid://bb74qb2rqf4ub" path="res://assets/Silkscreen_font/Silkscreen-Regular.ttf" id="2_7r5ik"]
[ext_resource type="Texture2D" uid="uid://kbv1sawkxgmk" path="res://test.png" id="2_l2ql4"]
[ext_resource type="Texture2D" uid="uid://dkba5c2e1xcmk" path="res://assets/sprites/knights/green_knight/Green Knight standby Sprite-sheet 16x16.png" id="3_dyotv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wmyrg"]
atlas = ExtResource("3_dyotv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3fj"]
atlas = ExtResource("3_dyotv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fw1b"]
atlas = ExtResource("3_dyotv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_81por"]
atlas = ExtResource("3_dyotv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wba4"]
atlas = ExtResource("3_dyotv")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xwfr"]
atlas = ExtResource("3_dyotv")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_su67k"]
atlas = ExtResource("3_dyotv")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8krq"]
atlas = ExtResource("3_dyotv")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e1br"]
atlas = ExtResource("3_dyotv")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl2gl"]
atlas = ExtResource("3_dyotv")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ula"]
atlas = ExtResource("3_dyotv")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wdw7"]
atlas = ExtResource("3_dyotv")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8n8n"]
atlas = ExtResource("3_dyotv")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afy6u"]
atlas = ExtResource("3_dyotv")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_itl05"]
atlas = ExtResource("3_dyotv")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0gyh"]
atlas = ExtResource("3_dyotv")
region = Rect2(240, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_li4jf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmyrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fw1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81por")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wba4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xwfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su67k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8krq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e1br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl2gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ula")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wdw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8n8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afy6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itl05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0gyh")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="screen_title" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gkkox")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l2ql4")

[node name="start_Button" type="Button" parent="background"]
layout_mode = 0
offset_left = 1424.0
offset_top = 684.0
offset_right = 1663.0
offset_bottom = 752.0
text = "Start"

[node name="quit_button" type="Button" parent="background/start_Button"]
layout_mode = 1
offset_top = 90.0
offset_right = 239.0
offset_bottom = 158.0
text = "Quit
"

[node name="knight_sprite" type="AnimatedSprite2D" parent="background"]
position = Vector2(966, 797)
scale = Vector2(17, 17)
sprite_frames = SubResource("SpriteFrames_li4jf")
frame = 15
frame_progress = 0.101185

[node name="title" type="Label" parent="background"]
layout_mode = 0
offset_left = 125.0
offset_top = -34.0
offset_right = 1788.0
offset_bottom = 470.0
theme_override_fonts/font = ExtResource("2_7r5ik")
theme_override_font_sizes/font_size = 125
text = "Knight's curse"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="background/start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="background/start_Button/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="background/start_Button/quit_button" to="." method="_on_start_button_pressed"]
[connection signal="ready" from="background/knight_sprite" to="." method="_on_knight_sprite_ready"]